gap size fix

--- a/src/components/collections-grid/collections-grid.module.scss
+++ b/src/components/collections-grid/collections-grid.module.scss
@@ -1,6 +1,7 @@
 @import '../../base/module';
 
 .ShopByRoom {
+  background-color: white;
   padding: 80px 0;
   text-align: center;
   h2 {
@@ -10,7 +11,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    column-gap: 40px;
+    column-gap: 50px;
     row-gap: 30px;
     margin-bottom: 50px;
 
@@ -25,7 +26,7 @@
         aspect-ratio: 1/1;
         position: relative;
         overflow: hidden;
-        background: $color-sage;
+        background: $color-sagelt;
       }
       img {
         width: 100%;
